# FDF

./: .gitignore  CMakeLists.txt  Makefile  fdf.c  fdf.h  read_map.c
includes/: fdf.h  keys.h
libft/: Makefile  endl.c  error_notice.c  fract.c  free_str.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_fswap.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_iswhitespace.c  ft_itoa.c  ft_itoa_base.c  ft_ldel.c  ft_log.c  ft_lst_clear.c  ft_lstadd.c  ft_lstadd_end.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow_uint.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+45 more)
libft/includes/: libft.h
sources/: brezeham.c  draw_dots.c  draw_lines.c  events.c  events_bonus.c  fdf.c  lines.c  main.c  parser.c  projection.c  rotation.c  s_lines.c  s_point.c  struct.c
src/: fdf.c  read_map.c
